# project_4

./: .env.example  README.md  catalog_fixture.json  groups.json  groups_moderator.json  pyproject.toml
blogs/: admin.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py
blogs/templates/blogs/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
blogs/templates/blogs/includes/: menu_subtemplate.html
catalog/: forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_product_owner_product_status_publication.py  0003_alter_product_options.py
catalog/templates/: contacts.html  home.html  one_product.html
catalog/templates/catalog/: base.html  contacts.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html  page_title.html  page_title_2.html
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/: login.html
users/templates/users/: user_form.html
